prevent menubar overflow

--- a/src/app/menubar/menubar.component.css
+++ b/src/app/menubar/menubar.component.css
@@ -5,6 +5,7 @@ div {
     justify-content: space-between;
     user-select: none;
     font-weight: 100;
+    flex-wrap: wrap;
 }
 
 div > * {
